discussion of application/dol+text will happen in the course of the OMG process; the filename extension .dol is fine now that we are not specifying any other serialization any more; fixes #47

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3922,8 +3922,8 @@ prefix maps, even if the serialization does not support prefix maps otherwise.
 \sclause{Document type}
 
 \begin{description}
-\item[MIME type] \mimetype{application/dol+text}\todonote[author=Christoph Lange,type=fyi]{just a placeholder so far, needs discussion}
-\item[Filename extension] .dol\todonote[author=Christoph Lange]{the most intuitive one, but gives the text serialization a privileged role over the others}
+\item[MIME type] \mimetype{application/dol+text}
+\item[Filename extension] .dol
 \end{description}
 
 \sclause{Concrete Syntax}\label{a:dol-text:concrete}
