setting ispell to American (don't worry, I'm not re-checking)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7376,7 +7376,7 @@ Translations from SROIQ(D) to \Flogic are discussed in \cite{Bruijn:2008}.
 
 %%% Local Variables: 
 %%% mode: latex
-%%% ispell-local-dictionary: "british"
+%%% ispell-local-dictionary: "american"
 %%% End: 
 
 
