--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1019,8 +1019,7 @@ requirement 6.5.6, DOL-conforming languages should support the
 use of IRIs. If they do not, there is a mechanism for assigning IRIs
 to (fragments of) language documents even if the language itself does not support
 this, see \ref{c:conform:serialization}.
-Moreover, there is a mechanism for injecting annotations
-and comments in existing language serializations, see \ref{sec:existing-serialization} and \ref{c:req:annotation}.
+Moreover, there is a mechanism for injecting IRIs in existing language serializations, see \ref{sec:existing-serialization} and \ref{c:req:annotation}.
    \\ \hline
 %
 6.7.(b)	& 
@@ -1378,7 +1377,7 @@ Well-behaved XML and RDF schemas support identifier injection in a `nice' way (r
 text-level comments).   In the worst case we cannot 
 inject anything into an OMS language fragment, because the OMS language serialization simply
 wouldn't allow us to write suitable comments, but we'd have to point into it from the enclosing context by
-by using standoff markup\termref{standoff markup}.
+by using \termref{standoff markup}.
 
 
 Further conformance criteria in this section are introduced to facilitate the convenient reuse of
@@ -1403,6 +1402,7 @@ Lange,date=D:201110051438+02'00',type=fyi]{That means that in a heterogeneous
 OMS we can recognize that a sentence is, \eg, stated in OWL, without
 explicitly ``tagging'' it as ``OWL'' (which we would have to do in the case
 of  a serialization that is merely text conforming).}
+\item The serialization shall use XML elements to represent all structural elements of an OMS.
 \item The schema shall not forbid both attributes and child elements from foreign namespaces (here: the
  DOL namespace \url{http://purl.net/dol/1.0/xml}) on any elements.\footnote{This is because either an attribute or a child element will be used to inject identifiers into elements of the XML serialization; cf. clause~\ref{sec:existing-serialization}.}
 \end{itemize}
@@ -1533,6 +1533,7 @@ explicit references to the logics used.
   \item{IETF/RFC 3986}{Uniform Resource Identifier (URI): Generic Syntax. January 2005.\\ \url{http://tools.ietf.org/html/rfc3986}}
   \item{IETF/RFC 3987}{Internationalized Resource Identifiers (IRIs). January 2005.\\ \url{http://tools.ietf.org/html/rfc3987}}
   \item{IETF/RFC 5147}{URI Fragment Identifiers for the text/plain Media Type.  April 2008.\\ \url{http://tools.ietf.org/html/rfc5147}}
+  \item{W3C/TR REC-xptr-framework:2003}{XPointer Framework.  W3C Recommendation, 25 March 2003. \\ \url{http://www.w3.org/TR/2003/REC-xptr-framework-20030325/}}
   \item{W3C/TR REC-rdf-concepts:2004}{Resource Description Framework (RDF): Concepts and Abstract Syntax.  W3C Recommendation, 02 February 2004. \\ \url{http://www.w3.org/TR/2004/REC-rdf-concepts-20040210/}}
   \item{W3C/TR REC-xml-names:2009}{Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}
@@ -4237,7 +4238,17 @@ Table~\ref{tab:key-signs} following key signs are reserved, and are not availabl
 \label{sec:existing-serialization}
 Any document providing an OMS in a serialization of a DOL conforming
 language can be used as-is in DOL, by reference to its IRI.
-\ednote{TODO: injection of comments, \%implies etc. See \ref{c:req:annotation} and \ref{s:annotations}.}
+
+The following cases apply for injecting identifiers into fragments of OMS languages, depending on the conformance level of the respective serialization of the OMS language used in terms of section~\ref{c:conform:serialization}:
+\begin{description}
+\item[XML conformance] Identifiers are added to XML elements by using the IRI-valued \textit{dol:id} XML attribute from the \url{http://purl.net/dol/1.0/xml} namespace, or, if the serialization does not support this attribute, by adding a \textit{dol:id} XML element as the first child, containing exactly one text node with the IRI.
+\item[RDF conformance] The RDF data model itself enables the assignment of IRI identifiers to all resources.
+\item[Text conformance] Identifiers are added by inserting a special comment immediately\footnote{The serialization \may allow whitespace between the keyword and the comment.} after the structural OMS element to be annotated, or, if this is not allowed and no ambiguity arises from inserting the comment \emph{before} the structural element, by doing the latter.  The complete comment \shall read \texttt{\%(I)\%} if the language uses the \texttt{\%} character to introduce comments, where \texttt{I} is the identifier IRI.  If the language uses a different comment syntax, the \emph{content} of the comment \shall start with \texttt{\%(I)\%}, possibly preceded by whitespace.
+\item[Standoff markup conformance] Standard mechanisms such as XPointer (\nisref{W3C/TR REC-xptr-framework:2003}) or \nisref{IETF/RFC 5147} shall be used as means of non-destructively assigning a URI to pieces of XML or text in the given OMS serialization.
+\end{description}
+\ednote{TODO: injection of identifiers addressed, but we also had \%implies etc.  The latter will probably be handled in a similar way, but I don't know how \emph{exactly}.}
+
+Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use 
 
 \clause{DOL semantics}\label{c:semantics}
 
