--- a/Standard/lstsemantic.sty
+++ b/Standard/lstsemantic.sty
@@ -55,7 +55,7 @@ morestring=[b]",%
 {morekeywords={%
 end,%
 hide,reveal,translate,project,%
-distributed-ontology,logic,syntax,language,%
+library,logic,syntax,language,%
 ontology,and,then,%
 combine,%
 interpretation,view,alignment,module,for,of,to,relation,%
