fixes #55: except for minor improvements w.r.t. formatting, syntax, and one citation, I didn't see anything that really needed to be done.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6170,14 +6170,14 @@ the subclass relation is fixed).
 
 In the case of \RDFS, the standard vocabulary contains more elements,
 like
-rdf:domain,
-rdf:range, rdf:Resource, rdf:Literal, rdf:Datatype, rdf:Class,
-rdf:subClassOf, rdf:subPropertyOf, rdf:member, rdf:Container,
-rdf:ContainerMembershipProperty.
+\texttt{rdfs:domain},
+\texttt{rdfs:range}, \texttt{rdfs:Resource}, \texttt{rdfs:Literal}, \texttt{rdfs:Datatype}, \texttt{rdfs:Class},
+\texttt{rdfs:subClassOf}, \texttt{rdfs:subPropertyOf}, \texttt{rdfs:member}, \texttt{rdfs:Container},
+\texttt{rdfs:ContainerMembershipProperty}.
 
-There is also \OWL full, an extension of \RDFS with resources
-like owl:Thing and owl:oneOf, tailored towards the representation of
-\OWL.
+There is also \OWL Full, an extension of \RDFS with resources
+such as \texttt{owl:Thing} and \texttt{owl:oneOf}, tailored towards the representation of
+\OWL~\cite{W3C:REC-owl2-rdf-based-semantics-20091027}.
 
 \end{definition}
 
