updated all RDF specs to 1.1 (doesn't affect DOL-conformance w.r.t. semantics)

--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -90,6 +90,12 @@ YEAR = 1992}
   journal = {In: Proc.\ of the 16th International World Wide Web Conference (WWW), pp. 717–726, 8–12 May 2007, Banff, Alberta, Canada. \url{https://www.cs.ox.ac.uk/isg/people/yevgeny.kazakov/publications/confs/CueHorKazSat07Modularity.pdf}},
   year = 2007,
 }
+@article{W3C:REC-rdf-syntax-grammar-20140225,
+  author = {W3C RDF CORE WORKING GROUP},
+  title = {{RDF} 1.1 {XML} Syntax},
+  journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/2014/REC-rdf-syntax-grammar-20140225/}},
+  year = 2014,
+}
 @article{W3C:REC-rdf-syntax-grammar-20040210,
   author = {W3C RDF CORE WORKING GROUP},
   title = {{RDF/XML} Syntax Specification (Revised)},
