--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1534,15 +1534,15 @@ explicit references to the logics used.
   \item{IETF/RFC 3987}{Internationalized Resource Identifiers (IRIs). January 2005.\\ \url{http://tools.ietf.org/html/rfc3987}}
   \item{IETF/RFC 5147}{URI Fragment Identifiers for the text/plain Media Type.  April 2008.\\ \url{http://tools.ietf.org/html/rfc5147}}
   \item{W3C/TR REC-xptr-framework:2003}{XPointer Framework.  W3C Recommendation, 25 March 2003. \\ \url{http://www.w3.org/TR/2003/REC-xptr-framework-20030325/}}
-  \item{W3C/TR REC-rdf-concepts:2004}{Resource Description Framework (RDF): Concepts and Abstract Syntax.  W3C Recommendation, 02 February 2004. \\ \url{http://www.w3.org/TR/2004/REC-rdf-concepts-20040210/}}
+  \item{W3C/TR REC-rdf11-concepts:2014}{RDF 1.1 Concepts and Abstract Syntax.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}}
   \item{W3C/TR REC-xml-names:2009}{Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}
   \item{W3C/TR REC-rdfa-core-20120607}{RDFa Core 1.1.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 07 June 2012.\\ \url{http://www.w3.org/TR/2012/REC-rdfa-core-20120607/}}
   % This standard has no unique year, as it consist of multiple parts (see http://tools.ietf.org/html/rfc3629#ref-ISO.10646)
   \item{ISO/IEC 10646}{Information technology – Universal Multiple-Octet coded Character Set (UCS)}
   %\item{W3C/TR REC-rdf-sparql-query:2008}{SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
-  \item{W3C/TR REC-rdf-schema:2004}{RDF Vocabulary Description Language 1.0: RDF Schema. W3C Recommendation, 10 February 2004.\\ \url{http://www.w3.org/TR/2004/REC-rdf-schema-20040210/}}
-  \item{W3C/TR REC-rdf-mt:2004}{RDF Semantics.  W3C Recommendation, 02 February 2004. \\ \url{http://www.w3.org/TR/2004/REC-rdf-mt-20040210/}}
+  \item{W3C/TR REC-rdf-schema:2014}{RDF Schema 1.1. W3C Recommendation, 25 February 2014.\\ \url{http://www.w3.org/TR/2014/REC-rdf-schema-20140225/}}
+  \item{W3C/TR REC-rdf11-mt:2014}{RDF 1.1 Semantics.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/}}
 \end{enumerate}
 \ednote{more, see RFP}
 \ednote{introduce a separate reference scheme for normative references}
@@ -1772,7 +1772,7 @@ values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
   \end{note}
 
   \begin{note}
-    RDF, serialized as RDF/XML \cite{W3C:REC-rdf-syntax-grammar-20040210}, is the most common format for publishing linked data.  However, its usage is not mandatory.
+    RDF, serialized as RDF/XML \cite{W3C:REC-rdf-syntax-grammar-20140225}, is the most common format for publishing linked data.  However, its usage is not mandatory.
   \end{note}
   \begin{note}
     Using HTTP content negotiation \cite{rfc2616} it is possible to serve representations in different formats from the same URL. 
@@ -1785,7 +1785,7 @@ values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
   \termdefinition{annotation}{additional information without a logical semantics that is attached to an element\index{element (of an OMS)} of an \termref{OMS}}
   \begin{note}\label{note:annotation-rdf}
 Formally, an annotation is given as a $(\text{subject}, \text{predicate}, \text{object})$ triple as 
-defined by \nisref{SOURCE: W3C/TR REC-rdf-concepts:2004, Section 6}.  The subject of an annotation 
+defined by \nisref{SOURCE: W3C/TR REC-rdf11-concepts:2014, Section 3.1}.  The subject of an annotation 
 is an element of an OMS.  The predicate is an RDF property defined in an external OMS and 
 describes in what way the annotation object is related to the annotation subject.
   \end{note}  
@@ -5907,7 +5907,7 @@ special cases to be described
 \end{figure}
 
 This annex specifies LoLa, an RDF vocabulary for describing \ul{Lo}gics and OMS \ul{La}nguages conforming with DOL, as well as serializations and translations, when they are entered into the \termref{registry} stipulated by chapter~\ref{c:conformance}.
-The normative subset of LoLa is given as an RDFS vocabulary (\nisref{W3C/TR REC-rdf-schema:2004}) having the namespace IRI \url{http://www.omg.org/spec/DOL/0.8/rdf#}.\footnote{The full version of LoLa is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in DOL, at
+The normative subset of LoLa is given as an RDF Schema vocabulary (\nisref{W3C/TR REC-rdf-schema:2014}) having the namespace IRI \url{http://www.omg.org/spec/DOL/0.8/rdf#}.\footnote{The full version of LoLa is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in DOL, at
 \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/}; a subset serialized in RDF is available for download from the namespace IRI.}.
 
 \ednote{cite paper}
@@ -6115,9 +6115,9 @@ without sequence markers \CLminus.
 \end{definition}
 
 
-\normannex{Conformance of RDF and RDFS with DOL}\label{a:rdfs}
+\normannex{Conformance of RDF and RDF Schema with DOL}\label{a:rdfs}
 
-The semantic conformance of RDFS (as specified in \nisref{W3C/TR REC-rdf-schema:2004}) with DOL is established in \cite{OntoGraph}.
+The semantic conformance of RDF Schema (as specified in \nisref{W3C/TR REC-rdf-schema:2014}) with DOL is established in \cite{OntoGraph}.
 
 The way of representing RDFS ontologies as RDF graphs satisfies the criteria for RDF conformance.
 
@@ -6125,7 +6125,7 @@ The way of representing RDFS ontologies as RDF graphs satisfies the criteria for
 \begin{definition}[\RDF and \RDFS]
 Following \cite{Lucanu}, 
 we define the institutions for the Resource Description
-Framework (\RDF) and \RDF-Schema (\RDFS), respectively. 
+Framework (\RDF) and \RDF Schema (also known as \RDFS), respectively. 
 These are based on a logic called \emph{bare} \RDF (\SimpleRDF), which consists
 of triples only (without any predefined resources).
 
@@ -6239,8 +6239,8 @@ of the sorts in $S'$ are generated by function symbols in $F'$.
 \end{figure}
 This annex provides a core graph of logics and translations, covering those OMS languages whose conformance with DOL is established in the preceding, normative annexes (OWL 2 DL in \aref{a:owl}, Common Logic in \aref{a:cl}, and RDFS in \aref{a:rdfs}).  The graph is shown in \fref{fig:ontograph-standards}.  Its nodes refer to the following OMS languages and profiles:
 \begin{itemize}
-\item RDF \nisref{W3C/TR REC-rdf-concepts:2004}
-\item RDFS \nisref{W3C/TR REC-rdf-schema:2004}
+\item RDF \nisref{W3C/TR REC-rdf11-concepts:2014}
+\item RDFS \nisref{W3C/TR REC-rdf11-schema:2014}
 \item EL, QL, RL (all being profiles of OWL) \nisref{W3C/TR REC-owl2-profiles:2009}
 \item OWL \nisref{W3C/TR REC-owl2-syntax:2009}
 \item CL (Common Logic) \nisref{ISO/IEC 24707:2007}
