pointed to LoLa paper

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5909,8 +5909,7 @@ special cases to be described
 This annex specifies LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL, as well as serializations and translations, when they are entered into the \termref{registry} stipulated by chapter~\ref{c:conformance}.
 The normative subset of LoLa is given as an RDF Schema vocabulary (\nisref{W3C/TR REC-rdf-schema:2014}) having the namespace IRI \url{http://www.omg.org/spec/DOL/0.8/rdf\#}.\footnote{The full version of LoLa is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in DOL, at
 \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/}; a subset serialized in RDF will be available from the namespace IRI (temporarily from \url{http://purl.net/dol/1.0/rdf\#}).}.
-
-\ednote{cite paper}
+For a full treatment of the background and design considerations of LoLa please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
 
 The tables in this annex list the classes and properties of the RDF vocabulary for describing OMS languages.  All class and properties are assumed to be in the DOL RDF namespace unless stated otherwise.
 
