--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -599,3 +599,19 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   status = {Reviewed}
 }
 
+@inproceedings{LMK:LoLaModularOntologyLogLangTrans12,
+  title = {{LoLa}: A Modular Ontology of Logics, Languages, and Translations},
+  author = {Christoph Lange and Till Mossakowski and Oliver Kutz},
+  booktitle = {Modular Ontologies},
+  editor = {Thomas Schneider and Dirk Walther},
+  eventtitle = {6\textsuperscript{th} International Workshop (WoMO)},
+  year = {2012},
+  eventdate = {2012-07-24},
+  venue = {Graz, Austria},
+  series = {CEUR Workshop Proceedings},
+  number = 875,
+  address = {Aachen},
+  issn = {1613-0073},
+  url = {http://CEUR-WS.org/Vol-875},
+  keywords = {workshop},
+  pubs = {clange,projects/ontoiop}}
