--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5911,9 +5911,9 @@ The normative subset of LoLa is given as an RDF Schema vocabulary (\nisref{W3C/T
 \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/}; a subset serialized in RDF will be available from the namespace IRI (temporarily from \url{http://purl.net/dol/1.0/rdf\#}).}.
 For a full treatment of the background and design considerations of LoLa please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
 
-The tables in this annex list the classes and properties of the RDF vocabulary for describing OMS languages.  All class and properties are assumed to be in the DOL RDF namespace unless stated otherwise.
+The tables in this annex list the classes and properties of LoLa.  All classes and properties are assumed to be in the LoLa namespace unless stated otherwise.
 
-\tref{tab:logic-vocab-classes} lists the classes of the RDF vocabulary for describing OMS languages.  Each row of the table translates into the following RDF triples (given in Turtle serialization):\CLnote[type=todo]{also cover rdfs:subClassOf (once we have such cases)}
+\tref{tab:logic-vocab-classes} lists the classes of LoLa.  Each row of the table translates into the following RDF triples (given in Turtle serialization~\cite{W3C:REC-turtle-20140225}):\CLnote[type=todo]{also cover rdfs:subClassOf (once we have such cases)}
 
 \begin{lstlisting}[language=N3]
 _:class rdf:type     rdfs:Class ;
