LoLa classes; annex title

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5897,7 +5897,7 @@ special cases to be described
 
 \appendix
 
-\normannex{LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
+\chapter[LoLa RDF vocabulary]{Annex (normative): LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
 
 \begin{figure}
   \centering
@@ -5929,9 +5929,10 @@ pos=h,
 ]{ll}{% table footnotes
 }{\FL
   Class & \ClassDocumentation{documentation}\ML
-  OMSLanguage & \ClassDocumentation{an OMS language}\NN
+  Language & \ClassDocumentation{an OMS language}\NN
   Logic & \ClassDocumentation{a logic that defines the semantics of an OMS language}\NN
-  Serialization & \ClassDocumentation{a serialization of an OMS language}\LL
+  Serialization & \ClassDocumentation{a serialization of an OMS language}\NN
+  Mapping & \ClassDocumentation{a mapping of an OMS language}\LL
 }
 
 \tref{tab:logic-vocab-prop} lists the properties of the RDF vocabulary for describing OMS languages.  Each row of the table translates into the following RDF triples (given in Turtle serialization):
