--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -623,7 +623,7 @@ Software developed under the terms of this license may claim compliance or confo
 All OMG specifications are subject to continuous review and improvement. As part of this process 
 we encourage readers to report any ambiguities, inconsistencies, or inaccuracies
 they may find by completing the Issue Reporting Form listed on the main web page
-http://www.omg.org, under Documents, Report a Bug/Issue (http://www.omg.org/technology/agreement.htm).
+http://www.omg.org, under Documents, Report a Bug/Issue\\ (http://www.omg.org/technology/agreement.htm).
 
 \renewcommand{\contentsname}{Table of Contents}
 
