more mapping classes

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5933,8 +5933,11 @@ pos=h,
   Language & \ClassDocumentation{an OMS language} & \NN
   Logic & \ClassDocumentation{a logic that defines the semantics of an OMS language} & \NN
   Serialization & \ClassDocumentation{a serialization of an OMS language} & \NN
-  Mapping & \ClassDocumentation{a mapping of an OMS language} & \NN
-  Translation & \ClassDocumentation{a mapping of an OMS language} & \NN
+  Mapping & \ClassDocumentation{a generic mapping between logics or languages} & \NN
+  LanguageMapping & \ClassDocumentation{a mapping between two languages} & Mapping \NN
+  LogicMapping & \ClassDocumentation{a mapping between two logics} & Mapping \NN
+  Translation & \ClassDocumentation{a translation between logics or, induced, between languages} & Mapping \NN
+  Reduction & \ClassDocumentation{a reduction between logics or, induced, between languages} & Mapping
 \LL
 }
 
