all major classes of LoLa

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5927,7 +5927,7 @@ caption={LoLa Classes},
 mincapwidth=\textwidth,
 label={tab:logic-vocab-classes},
 pos=h,
-]{lll}{% table footnotes
+]{p{.25\textwidth}p{.45\textwidth}p{.25\textwidth}}{% table footnotes
 }{\FL
   Class & \ClassDocumentation{documentation} & Superclass \ML
   Language & \ClassDocumentation{an OMS language} & \NN
@@ -5937,8 +5937,16 @@ pos=h,
   LanguageMapping & \ClassDocumentation{a mapping between two languages} & Mapping \NN
   LogicMapping & \ClassDocumentation{a mapping between two logics} & Mapping \NN
   Translation & \ClassDocumentation{a translation between logics or, induced, between languages} & Mapping \NN
-  Reduction & \ClassDocumentation{a reduction between logics or, induced, between languages} & Mapping
-\LL
+  Reduction & \ClassDocumentation{a reduction between logics or, induced, between languages} & Mapping \NN
+  DefaultMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  WeaklyExactMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  ExactMapping & \ClassDocumentation{a default mapping} & WeaklyExactMapping \NN
+  FaithfulMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  ModelExpansiveMapping & \ClassDocumentation{a default mapping} & FaithfulMapping \NN
+  ModelBijectiveMapping & \ClassDocumentation{a default mapping} & ModelExpansiveMapping \NN
+  Embedding & \ClassDocumentation{a default mapping} & ModelBijectiveMapping, LogicMapping, Translation \NN
+  PlainMapping & \ClassDocumentation{a default mapping} & Mapping \NN
+  SimpleTheoroidalMapping & \ClassDocumentation{a default mapping} & Mapping \LL
 }
 
 \tref{tab:logic-vocab-prop} lists the properties of the RDF vocabulary for describing OMS languages.  Each row of the table translates into the following RDF triples (given in Turtle serialization):
